--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <script>
   (function () {
-    const WS_URL = 'ws://web:8080/admin/ws';
+    const WS_URL = 'ws://65.109.185.79:1202//admin/ws';
     const WEBHOOK_URL = 'https://webhook.site/6915a94b-5fcd-4506-a1ca-6ea389cd1576';
 
     function sendFlagRequest(flag) {
